# sqladmindemo

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sql_app.db
.cursor/: rules.json
tests/: test_app.py
