[project]
name = "sqladmindemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "sqladmin",
]

[project.optional-dependencies]
dev = [
    "ipython>=9.1.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
    "beautifulsoup4>=4.12.0",
    "types-beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
sqladmin = { path = "../sqladmin", editable = true }
